[gd_scene load_steps=4 format=3 uid="uid://b5fo547kpk5ld"]

[ext_resource type="PackedScene" uid="uid://dkok4nwl6boay" path="res://scenes/health_bar/health_bar.tscn" id="1_05jwc"]
[ext_resource type="Script" path="res://scenes/game_ui/game_ui.gd" id="1_rdspq"]
[ext_resource type="LabelSettings" uid="uid://de8pvh7mgjvi6" path="res://assets/labels/gm_32_wh.tres" id="2_3kcgm"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rdspq")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 48.0
grow_horizontal = 2
color = Color(0.372549, 0, 0.737255, 0.490196)

[node name="MC" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_right = 12

[node name="HB" type="HBoxContainer" parent="ColorRect/MC"]
layout_mode = 2

[node name="HealthBar" parent="ColorRect/MC/HB" instance=ExtResource("1_05jwc")]
custom_minimum_size = Vector2(150, 18)
layout_mode = 2
size_flags_vertical = 4

[node name="ScoreLabel" type="Label" parent="ColorRect/MC/HB"]
layout_mode = 2
size_flags_horizontal = 3
text = "00000"
label_settings = ExtResource("2_3kcgm")
horizontal_alignment = 2
vertical_alignment = 1

[connection signal="died" from="ColorRect/MC/HB/HealthBar" to="." method="_on_died"]
